<resources>
    <string name="app_name">Simple gallery</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sliding_interval_key">PREF_SLIDING_INTERVAL</string>
    <string name="pref_sliding_interval_title">Sliding interval</string>
    <integer name="pref_sliding_interval_default">3</integer>
    <integer name="pref_sliding_interval_min">1</integer>
    <integer name="pref_sliding_interval_max">60</integer>
    <string name="pref_sliding_animation_key">PREF_SLIDING_ANIMATION</string>
    <string name="pref_sliding_animation_title">Animation</string>
    <string name="pref_sliding_animation_default">NONE</string>
    <string-array name="pref_sliding_animation_option_values">
        <item>NONE</item>
        <item>FADE</item>
    </string-array>
    <string-array name="pref_sliding_animation_option_titles">
        <item>None</item>
        <item>Fade</item>
    </string-array>
    <string name="pref_data_source_type_key">PREF_DATA_SOURCE_TYPE</string>
    <string name="pref_data_source_type_title">Data source</string>
    <string name="pref_data_source_type_default">@string/data_source_type_dir</string>
    <string-array name="pref_data_source_type_option_values">
        <item>@string/data_source_type_dir</item>
        <item>@string/data_source_type_url_list</item>
    </string-array>
    <string name="data_source_type_dir">DIR</string>
    <string name="data_source_type_url_list">URL_LIST</string>
    <string-array name="pref_data_source_type_option_titles">
        <item>Directory</item>
        <item>Url list</item>
    </string-array>
    <string name="pref_data_source_directory_key">PREF_DATA_SOURCE_DIRECTORY</string>
    <string name="pref_data_source_directory_title">Image directory</string>
    <string name="pref_data_source_directory_default"></string>
    <string name="pref_data_source_url_list_key">PREF_DATA_SOURCE_URL_LIST</string>
    <string name="pref_data_source_url_list_title">Url list</string>
    <string-array name="pref_data_source_url_list_default"></string-array>
    <string name="directory_chooser_new_directory_name">New folder</string>
    <string name="url_data_source_add">Add one more</string>
    <string name="ok_caption">OK</string>
    <string name="cancel_caption">Cancel</string>
    <string name="err_data_source_dir_is_not_dir">Configured directory path does not points to directory</string>
    <string name="err_data_source_dir_not_exists">Configured directory path does not exist</string>
    <string name="err_data_source_dir_not_readable">Configured directory is not readable</string>
    <string name="error_dialog_title">Error</string>
    <integer name="pref_data_source_url_list_max_count">6</integer>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
</resources>
